Changes for 3.2.8rc1

New features:
........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)

Bug fixes:
...G...... [ZBX-12653] fixed heap corruption in Windows agent. Patch from Ronnie Kaech, thanks! (abs)
A......... [ZBX-12660] fixed result of hostinterface.replacehostinterfaces method (Sasha)
..F....... [ZBX-12469] added new context for 'Second' string to be properly translated in maintenance period form (gcalenko)
.......PS. [ZBX-12493] fixed address and ports array size in zbx_init_ipmi_host() to match OpenIPMI internals (Andris, vso)
..F....... [ZBX-12623] fixed label macro resolving in maps (vjaceslavs)
..F.....S. [ZBX-11042] allowed libcurl to choose SMTP authentication mechanism other than PLAIN (gleb, vjaceslavs)
..F....... [ZBX-8997] fixed trigger expression validation test form (gcalenko, Sasha)
..F.I...S. [ZBX-12434] fixed housekeeping of problems and events for deleted items and triggers; added optional database patch to cleanup problems for deleted items and triggers (vso)
..F....... [ZBX-12646] fixed incorrect SQL query in availability reports (Sasha)
..F....... [ZBX-12545] fixed undefined index error on latest data page when host was deleted in another session (gcalenko)
..F....... [ZBX-12321] fixed removal of multiselect options using backspace button (miks)
..F....... [ZBX-12416] optimized data selection of user preferences stored in profiles (gcalenko)
..F....... [ZBX-11607] fixed a rounding of large unsigned numbers (miks)
..F....... [ZBX-12404] fixed visibility of item data first row for 'latest data' page and 'audit log' page (gcalenko)
..F....... [ZBX-12463] fixed undefined index error in "Last 20 issues" (Sasha)
........S. [ZBX-12186] fixed parallel processing of multiple values for same lld rule (vjaceslavs)
..F....... [ZBX-11887] fixed improper DB::refreshIds() call when selected row is locked (miks)